--- a/src/styles.scss
+++ b/src/styles.scss
@@ -401,3 +401,10 @@ section {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
+
+.ingredients {
+  * {
+    padding: 3px;
+    margin: 0 3px;
+  }
+}
