--- a/src/app/secure/food-list/food-list.component.html
+++ b/src/app/secure/food-list/food-list.component.html
@@ -20,7 +20,7 @@
 
       <div class="row">
         <div class="col-lg-6 my-1" *ngFor="let food of kitchen.foods">
-          <div class="card  h-card media p-2">
+          <div class="card media p-2">
             <div class="media-body d-flex">
               <div class="figure-img">
                 <img src="https://images-na.ssl-images-amazon.com/images/I/61UXPmnTC9L._SL1024_.jpg"
@@ -44,6 +44,18 @@
                 <p class="m-0 small">
                   <span class="fa fa-info-circle text-secondary"></span> {{food.description}}
                 </p>
+
+                <div class="d-flex flex-column">
+                  <div class="py-2">
+                    <input type="hidden" [value]="1" #itemCount min="1" max="20">
+                    <span class="fa fa-minus btn btn-secondary btn-sm"
+                          (click)="rem(itemCount)"></span> {{itemCount.value}}
+                    <span class="fa fa-plus btn btn-secondary btn-sm" (click)="add(itemCount)"></span>
+                  </div>
+                  <div>
+                    <button class="btn btn-primary btn-sm" (click)="addToCart(itemCount.value, food)">Add to cart</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
